add basic styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
+        <header></header>
         <div class="container">
             <div class="calculator">
                 <div class="display"></div>
@@ -21,22 +22,22 @@
                         <button class="button number">4</button>
                         <button class="button number">5</button>
                         <button class="button number">6</button>
-                        <button class="button delete">+</button>
+                        <button class="button add">+</button>
                     </div>
                     <div class="row">
                         <button class="button number">7</button>
                         <button class="button number">8</button>
                         <button class="button number">9</button>
-                        <button class="button delete">-</button>
+                        <button class="button subtract">-</button>
                     </div>
                     <div class="row">
                         <button class="button number">0</button>
                         <button class="button number">.</button>
-                        <button class="button number">=</button>
-                        <button class="button delete">*</button>
+                        <button class="button delete">/</button>
+                        <button class="button multiply">*</button>
                     </div>
                     <div class="row">
-                        <button class="button delete">/</button>
+                        <button class="button calculate">=</button>
                     </div>
                 </div>
             </div>
