--- a/index.html
+++ b/index.html
@@ -1,47 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Calculator</title>
-        <link rel="stylesheet" href="./style.css">
-        <script src="./script.js" defer></script>
-    </head>
-    <body>
-        <header></header>
-        <div class="container">
-            <div class="calculator">
-                <div class="display"></div>
-                <div class="buttons">
-                    <div class="row">
-                        <button class="button number">1</button>
-                        <button class="button number">2</button>
-                        <button class="button number">3</button>
-                        <button class="button delete">AC</button>
-                    </div>
-                    <div class="row">
-                        <button class="button number">4</button>
-                        <button class="button number">5</button>
-                        <button class="button number">6</button>
-                        <button class="button add">+</button>
-                    </div>
-                    <div class="row">
-                        <button class="button number">7</button>
-                        <button class="button number">8</button>
-                        <button class="button number">9</button>
-                        <button class="button subtract">-</button>
-                    </div>
-                    <div class="row">
-                        <button class="button number">0</button>
-                        <button class="button number">.</button>
-                        <button class="button delete">/</button>
-                        <button class="button multiply">*</button>
-                    </div>
-                    <div class="row">
-                        <button class="button calculate">=</button>
-                    </div>
+
+<head>
+    <meta charset="utf-8">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
+</head>
+
+<body>
+    <header>
+        <h2>calculator</h2>
+        <div>
+            <input type="checkbox" class="theme-toggle" id="checkbox">
+            <label for="checkbox">
+                <svg class="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
+                aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>Sunny</title>
+                  <desc>A line styled icon from Orion Icon Library.</desc>
+                  <path data-name="layer2"
+                  fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2" d="M32 2v16m0 28v16m30-30H46m-28 0H2m8.8-21.2l11.3 11.3m19.8 19.8l11.3 11.3m0-42.4L41.9 22.1M22.1 41.9L10.8 53.2"
+                  stroke-linejoin="round" stroke-linecap="round"></path>
+                  <circle data-name="layer1" cx="32" cy="32" r="14" fill="none" stroke="#202020"
+                  stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
+                </svg>
+                <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
+                aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>Half Moon</title>
+                  <desc>A line styled icon from Orion Icon Library.</desc>
+                  <path data-name="layer1"
+                  d="M33.9 11A16.8 16.8 0 0 1 12 34.1 20.1 20.1 0 1 0 33.9 11z" fill="none"
+                  stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
+                  stroke-linecap="round"></path></svg>
+            </label>
+        </div>
+    </header>
+    <div class="container">
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="buttons">
+                <div class="row">
+                    <button class="button number">1</button>
+                    <button class="button number">2</button>
+                    <button class="button number">3</button>
+                    <button class="button delete">AC</button>
+                </div>
+                <div class="row">
+                    <button class="button number">4</button>
+                    <button class="button number">5</button>
+                    <button class="button number">6</button>
+                    <button class="button add">+</button>
+                </div>
+                <div class="row">
+                    <button class="button number">7</button>
+                    <button class="button number">8</button>
+                    <button class="button number">9</button>
+                    <button class="button subtract">-</button>
+                </div>
+                <div class="row">
+                    <button class="button number">0</button>
+                    <button class="button number">.</button>
+                    <button class="button delete">/</button>
+                    <button class="button multiply">*</button>
+                </div>
+                <div class="row">
+                    <button class="button calculate">=</button>
                 </div>
             </div>
         </div>
-        <footer>@heklaniMilje</footer>
-    </body>
+    </div>
+    <footer>@heklaniMilje</footer>
+</body>
+
 </html>
