rewrite logic of calculation

--- a/index.html
+++ b/index.html
@@ -40,31 +40,32 @@
             <div class="display"></div>
             <div class="buttons">
                 <div class="row">
-                    <button class="button number">1</button>
-                    <button class="button number">2</button>
-                    <button class="button number">3</button>
+                    <button class="button number" data-num = 1>1</button>
+                    <button class="button number" data-num = 2>2</button>
+                    <button class="button number" data-num = 3>3</button>
                     <button class="button delete">AC</button>
                 </div>
                 <div class="row">
-                    <button class="button number">4</button>
-                    <button class="button number">5</button>
-                    <button class="button number">6</button>
+                    <button class="button number" data-num = 4>4</button>
+                    <button class="button number" data-num = 5>5</button>
+                    <button class="button number" data-num = 6>6</button>
                     <button class="button add">+</button>
                 </div>
                 <div class="row">
-                    <button class="button number">7</button>
-                    <button class="button number">8</button>
-                    <button class="button number">9</button>
+                    <button class="button number" data-num = 7>7</button>
+                    <button class="button number" data-num = 8>8</button>
+                    <button class="button number" data-num = 9>9</button>
                     <button class="button subtract">-</button>
                 </div>
                 <div class="row">
-                    <button class="button number">0</button>
-                    <button class="button number">.</button>
-                    <button class="button delete">/</button>
+                    <button class="button number" data-num = 0>0</button>
+                    <button class="button dot">.</button>
+                    <button class="button divide">/</button>
                     <button class="button multiply">*</button>
                 </div>
                 <div class="row">
                     <button class="button calculate">=</button>
+                    <button class="button delete-one">DEL</button>
                 </div>
             </div>
         </div>
