--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     <header>
         <h2>calculator</h2>
-        <div>
+        <div class="theme">
             <input type="checkbox" class="theme-toggle" id="checkbox">
             <label for="checkbox">
                 <svg class="sun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
-                aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <title>Sunny</title>
-                  <desc>A line styled icon from Orion Icon Library.</desc>
-                  <path data-name="layer2"
-                  fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2" d="M32 2v16m0 28v16m30-30H46m-28 0H2m8.8-21.2l11.3 11.3m19.8 19.8l11.3 11.3m0-42.4L41.9 22.1M22.1 41.9L10.8 53.2"
-                  stroke-linejoin="round" stroke-linecap="round"></path>
-                  <circle data-name="layer1" cx="32" cy="32" r="14" fill="none" stroke="#202020"
-                  stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
+                    aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <title>Sunny</title>
+                    <desc>A line styled icon from Orion Icon Library.</desc>
+                    <path data-name="layer2" fill="none" stroke="#202020" stroke-miterlimit="10" stroke-width="2"
+                        d="M32 2v16m0 28v16m30-30H46m-28 0H2m8.8-21.2l11.3 11.3m19.8 19.8l11.3 11.3m0-42.4L41.9 22.1M22.1 41.9L10.8 53.2"
+                        stroke-linejoin="round" stroke-linecap="round"></path>
+                    <circle data-name="layer1" cx="32" cy="32" r="14" fill="none" stroke="#202020"
+                        stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
                 </svg>
                 <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
-                aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <title>Half Moon</title>
-                  <desc>A line styled icon from Orion Icon Library.</desc>
-                  <path data-name="layer1"
-                  d="M33.9 11A16.8 16.8 0 0 1 12 34.1 20.1 20.1 0 1 0 33.9 11z" fill="none"
-                  stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
-                  stroke-linecap="round"></path></svg>
+                    aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <title>Half Moon</title>
+                    <desc>A line styled icon from Orion Icon Library.</desc>
+                    <path data-name="layer1" d="M33.9 11A16.8 16.8 0 0 1 12 34.1 20.1 20.1 0 1 0 33.9 11z" fill="none"
+                        stroke="#202020" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"
+                        stroke-linecap="round"></path>
+                </svg>
             </label>
         </div>
     </header>
@@ -40,28 +40,28 @@
             <div class="display"></div>
             <div class="buttons">
                 <div class="row">
-                    <button class="button number" data-num = 1>1</button>
-                    <button class="button number" data-num = 2>2</button>
-                    <button class="button number" data-num = 3>3</button>
+                    <button class="button number" data-num=1>1</button>
+                    <button class="button number" data-num=2>2</button>
+                    <button class="button number" data-num=3>3</button>
                     <button class="button delete">AC</button>
                 </div>
                 <div class="row">
-                    <button class="button number" data-num = 4>4</button>
-                    <button class="button number" data-num = 5>5</button>
-                    <button class="button number" data-num = 6>6</button>
-                    <button class="button add">+</button>
+                    <button class="button number" data-num=4>4</button>
+                    <button class="button number" data-num=5>5</button>
+                    <button class="button number" data-num=6>6</button>
+                    <button class="button op add">+</button>
                 </div>
                 <div class="row">
-                    <button class="button number" data-num = 7>7</button>
-                    <button class="button number" data-num = 8>8</button>
-                    <button class="button number" data-num = 9>9</button>
-                    <button class="button subtract">-</button>
+                    <button class="button number" data-num=7>7</button>
+                    <button class="button number" data-num=8>8</button>
+                    <button class="button number" data-num=9>9</button>
+                    <button class="button op subtract">-</button>
                 </div>
                 <div class="row">
-                    <button class="button number" data-num = 0>0</button>
+                    <button class="button number" data-num=0>0</button>
                     <button class="button dot">.</button>
-                    <button class="button divide">/</button>
-                    <button class="button multiply">*</button>
+                    <button class="button op divide">/</button>
+                    <button class="button op multiply">*</button>
                 </div>
                 <div class="row">
                     <button class="button calculate">=</button>
